# SynthesIA

./: .dockerignore  .env.example  .gitignore  Changelog.md  Dockerfile  README.md  Todo.md  docker-compose.yml  main.py  pyproject.toml
config/: sources.toml
docs/: context_prompt.md  deploiement-synology.md  memo.md  plan-implementation.md  target.md
synthesia/: pilote.py
synthesia/analyse/: client.py  schemas.py  synthese.py  tri.py
synthesia/api/: app.py
synthesia/brief/: pipeline.py
synthesia/collecte/: extraction.py  rss.py
synthesia/notifier/: mail.py
synthesia/stockage/: base.py  vecteurs.py
