[project]
name = "synthesia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pysqlite3-binary>=0.5.4.post2",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.9",
    "tomli>=2.4.1",
    "trafilatura>=2.1.0",
    "uvicorn>=0.49.0",
]
